[package]
name = "tokencrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.8", features = ["asm-aarch64"] }
rayon = "1.8.0"
itertools = "0.12.0"
hex = "0.4.3"
once_cell = "1.19.0"
clap = { version = "4.5.21", features = ["derive"] }
